Added Add/ Edit and Delete Forms
Completed the Add/Edit and Delete forms and fixed some minor issues on loading

--- a/password-manager-CSharpGUI/password-manager-CSharpGUI/password-manager-CSharpGUI.csproj
+++ b/password-manager-CSharpGUI/password-manager-CSharpGUI/password-manager-CSharpGUI.csproj
@@ -83,6 +83,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsLanguageManagement.cs" />
+    <Compile Include="frmAddPassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddPassword.Designer.cs">
+      <DependentUpon>frmAddPassword.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmDelete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDelete.Designer.cs">
+      <DependentUpon>frmDelete.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,6 +119,13 @@
     <Compile Include="frmSetup.Designer.cs">
       <DependentUpon>frmSetup.cs</DependentUpon>
     </Compile>
+    <Compile Include="GraphicsExtension.cs" />
+    <Compile Include="PasswordGenerator.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PasswordGenerator.Designer.cs">
+      <DependentUpon>PasswordGenerator.cs</DependentUpon>
+    </Compile>
     <Compile Include="PasswordStrengthMeter.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -130,6 +149,12 @@
     <Compile Include="WatermarkTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <EmbeddedResource Include="frmAddPassword.resx">
+      <DependentUpon>frmAddPassword.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDelete.resx">
+      <DependentUpon>frmDelete.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -141,6 +166,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSetup.resx">
       <DependentUpon>frmSetup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PasswordGenerator.resx">
+      <DependentUpon>PasswordGenerator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PasswordStrengthMeter.resx">
       <DependentUpon>PasswordStrengthMeter.cs</DependentUpon>
