Edit and View Function
Implemented Editing and view functionalities and fixed some bugs

--- a/password-manager-CSharpGUI/password-manager-CSharpGUI/password-manager-CSharpGUI.csproj
+++ b/password-manager-CSharpGUI/password-manager-CSharpGUI/password-manager-CSharpGUI.csproj
@@ -119,6 +119,12 @@
     <Compile Include="frmSetup.Designer.cs">
       <DependentUpon>frmSetup.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmView.Designer.cs">
+      <DependentUpon>frmView.cs</DependentUpon>
+    </Compile>
     <Compile Include="GraphicsExtension.cs" />
     <Compile Include="PasswordGenerator.cs">
       <SubType>UserControl</SubType>
@@ -166,6 +172,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSetup.resx">
       <DependentUpon>frmSetup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmView.resx">
+      <DependentUpon>frmView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PasswordGenerator.resx">
       <DependentUpon>PasswordGenerator.cs</DependentUpon>
