--- a/password-manager-CSharpGUI/password-manager-CSharpGUI/password-manager-CSharpGUI.csproj
+++ b/password-manager-CSharpGUI/password-manager-CSharpGUI/password-manager-CSharpGUI.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsLanguageManagement.cs" />
+    <Compile Include="clsSettings.cs" />
     <Compile Include="frmAddPassword.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +95,12 @@
     </Compile>
     <Compile Include="frmDelete.Designer.cs">
       <DependentUpon>frmDelete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmExport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmExport.Designer.cs">
+      <DependentUpon>frmExport.cs</DependentUpon>
     </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
@@ -113,6 +120,12 @@
     <Compile Include="frmMessage.Designer.cs">
       <DependentUpon>frmMessage.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSettings.Designer.cs">
+      <DependentUpon>frmSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSetup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,6 +139,18 @@
       <DependentUpon>frmView.cs</DependentUpon>
     </Compile>
     <Compile Include="GraphicsExtension.cs" />
+    <Compile Include="LanguageItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="LanguageItem.Designer.cs">
+      <DependentUpon>LanguageItem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModernCheckBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ModernCheckBox.Designer.cs">
+      <DependentUpon>ModernCheckBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="PasswordGenerator.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -161,6 +186,9 @@
     <EmbeddedResource Include="frmDelete.resx">
       <DependentUpon>frmDelete.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmExport.resx">
+      <DependentUpon>frmExport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -170,11 +198,20 @@
     <EmbeddedResource Include="frmMessage.resx">
       <DependentUpon>frmMessage.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmSettings.resx">
+      <DependentUpon>frmSettings.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmSetup.resx">
       <DependentUpon>frmSetup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmView.resx">
       <DependentUpon>frmView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LanguageItem.resx">
+      <DependentUpon>LanguageItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModernCheckBox.resx">
+      <DependentUpon>ModernCheckBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PasswordGenerator.resx">
       <DependentUpon>PasswordGenerator.cs</DependentUpon>
