Added the about page
Added the about page and splash screen and fixed a few bugs and added some additional refining

--- a/password-manager-CSharpGUI/password-manager-CSharpGUI/password-manager-CSharpGUI.csproj
+++ b/password-manager-CSharpGUI/password-manager-CSharpGUI/password-manager-CSharpGUI.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Project Muragala.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Devolutions.Zxcvbn, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Devolutions.Zxcvbn.1.0.1\lib\netstandard2.0\Devolutions.Zxcvbn.dll</HintPath>
@@ -84,6 +87,12 @@
   <ItemGroup>
     <Compile Include="clsLanguageManagement.cs" />
     <Compile Include="clsSettings.cs" />
+    <Compile Include="frmAbout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAbout.Designer.cs">
+      <DependentUpon>frmAbout.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAddPassword.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +140,12 @@
     </Compile>
     <Compile Include="frmSetup.Designer.cs">
       <DependentUpon>frmSetup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmSplash.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSplash.Designer.cs">
+      <DependentUpon>frmSplash.cs</DependentUpon>
     </Compile>
     <Compile Include="frmView.cs">
       <SubType>Form</SubType>
@@ -180,6 +195,9 @@
     <Compile Include="WatermarkTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <EmbeddedResource Include="frmAbout.resx">
+      <DependentUpon>frmAbout.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAddPassword.resx">
       <DependentUpon>frmAddPassword.cs</DependentUpon>
     </EmbeddedResource>
@@ -203,6 +221,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSetup.resx">
       <DependentUpon>frmSetup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSplash.resx">
+      <DependentUpon>frmSplash.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmView.resx">
       <DependentUpon>frmView.cs</DependentUpon>
@@ -247,6 +268,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Project Muragala.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Text.Json.6.0.5\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.5\build\System.Text.Json.targets')" />
