--- a/password-manager-CSharpGUI/password-manager-CSharpGUI/password-manager-CSharpGUI.csproj
+++ b/password-manager-CSharpGUI/password-manager-CSharpGUI/password-manager-CSharpGUI.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E7FFE39B-C62C-4DA0-B06B-BAE6D72BFE5C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>password_manager_CSharpGUI</RootNamespace>
-    <AssemblyName>password-manager-CSharpGUI</AssemblyName>
+    <AssemblyName>Muragala Password Manager</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
